@@ -50,6 +50,14 @@ PROCEDURE __BUILTIN__ fabsf (x: SHORTREAL) : SHORTREAL ;
 PROCEDURE __BUILTIN__ fabs (x: REAL) : REAL ;
 PROCEDURE __BUILTIN__ fabsl (x: LONGREAL) : LONGREAL ;
 
+PROCEDURE __BUILTIN__ logf (x: SHORTREAL) : SHORTREAL ;
+PROCEDURE __BUILTIN__ log (x: REAL) : REAL ;
+PROCEDURE __BUILTIN__ logl (x: LONGREAL) : LONGREAL ;
+
+PROCEDURE __BUILTIN__ expf (x: SHORTREAL) : SHORTREAL ;
+PROCEDURE __BUILTIN__ exp (x: REAL) : REAL ;
+PROCEDURE __BUILTIN__ expl (x: LONGREAL) : LONGREAL ;
+
 PROCEDURE __BUILTIN__ alloca (i: CARDINAL) : ADDRESS ;
 PROCEDURE __BUILTIN__ memcpy (dest, src: ADDRESS; n: CARDINAL) : ADDRESS ;
 PROCEDURE __BUILTIN__ index (s: ADDRESS; c: INTEGER) : ADDRESS ;
